Allow all routes temporarily to fix 403